govcms-theme/src/styles/styles.css
/* ... */
.cd-morph-dropdown .nav-trigger span::after, .cd-morph-dropdown .nav-trigger span::before {
  content: '';
  left: 0;
  transition: transform .3s;
}
.cd-morph-dropdown .nav-trigger span::before {
  transform: translateY(-9px);
}
.cd-morph-dropdown .nav-trigger span::after {
  transform: translateY(9px);
}
.cd-morph-dropdown.nav-open {
  background-color: rgba(255, 255, 255, 0.85);
}
.cd-morph-dropdown.nav-open .nav-trigger span {
  background-color: transparent;
}
.cd-morph-dropdown.nav-open .nav-trigger span:before {
  transform: rotate(45deg);
}
.cd-morph-dropdown.nav-open .nav-trigger span:after {
  transform: rotate(-45deg);
}
.cd-morph-dropdown .main-nav {
  display: none;
}
.cd-morph-dropdown .morph-dropdown-wrapper {
  display: none;
  position: absolute;
  top: 60px;
  left: 0;
  width: 100%;
  padding: 1.2em 5%;
  background-color: rgba(255, 255, 255, 0.95);
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
  z-index: 1;
}
@supports (-webkit-backdrop-filter: blur(10px)) {
  .cd-morph-dropdown .morph-dropdown-wrapper {
    background-color: rgba(255, 255, 255, 0.8);
  }
}
.cd-morph-dropdown.nav-open .morph-dropdown-wrapper {
  display: block;
  border: 1px solid #6ad5ac;
  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
}
.cd-morph-dropdown .dropdown-list ul {
  list-style: none;
}
.cd-morph-dropdown .dropdown-list ul a {
  text-align: left;
  padding-left: 0;
  font-size: 17.5px;
}
.cd-morph-dropdown .dropdown-list ul h2 {
  margin-left: 0;
}
.cd-morph-dropdown .dropdown-list > ul {
  padding-left: 0;
}
.cd-morph-dropdown .dropdown-list > ul > li {
  margin-bottom: 3.3em;
}
.cd-morph-dropdown .dropdown-list > ul > li ul {
  padding-left: 0;
}
.cd-morph-dropdown .label {
  display: block;
  margin-bottom: .8em;
}
.cd-morph-dropdown .dd-content li::after {
  clear: both;
  content: "";
  display: block;
}
.cd-morph-dropdown .links .dd-content > ul > li {
  margin-top: 1em;
}
.cd-morph-dropdown .links-list a,
.cd-morph-dropdown .btn {
  display: block;
}
.cd-morph-dropdown .dd-content h2 {
  color: #777;
  margin: 20px 0 10px 14px;
  font-size: 16px;
}
/* ... */

